<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    tools:context=".PayWithPaymentURLActivity">

    <EditText
        android:id="@+id/editTextPaymentURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_payment_url"
        android:hint="@string/hint_payment_url"
        android:text="@string/base_url_payment"
        app:layout_constraintBottom_toTopOf="@+id/editTextOrderId"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextOrderId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_order_id"
        android:hint="@string/hint_order_id"
        android:text="@string/order_id"
        app:layout_constraintBottom_toTopOf="@+id/btnProceed" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Proceed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOrderId" />


</androidx.constraintlayout.widget.ConstraintLayout>